--- a/services.html
+++ b/services.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>GIT Service Page</h1>
+    <div>
+        <form>
+            <input type="text" id="username" placeholder="your name">
+            <button>Add to list</button>
+        </form>
+    </div>
 </body>
 </html>
