Add form with password field

--- a/services.html
+++ b/services.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>GIT Service Page</h1>
+    <form>
+        <input type="text" id="user-name">
+        <input type="text" id="password">
+        <button>Submit</button>
+    </form>
 </body>
 </html>
