--- a/home.html
+++ b/home.html
@@ -9,5 +9,8 @@
     
     <h1>Git Home exercise 2</h1>
     <h2>Add git copy</h2>
+    <footer>
+        <p>Footer 1</p>
+    </footer>
 </body>
 </html>
