Add second footer item

--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <h2>Add git copy</h2>
     <footer>
         <p>Footer 1</p>
+        <span>Footer 2 Item</span>
     </footer>
 </body>
 </html>
